fix overlapping back button

--- a/webapp/channels/src/components/header_footer_route/header.scss
+++ b/webapp/channels/src/components/header_footer_route/header.scss
@@ -63,13 +63,19 @@
     .header-back-button {
         position: absolute;
         top: unset;
-        bottom: 0;
+        bottom: -8px;
         width: auto;
         padding: 0 0 0 40px;
         background: none;
 
         a {
             @include link;
+        }
+    }
+
+    &.has-free-banner.has-custom-site-name {
+        .header-back-button {
+            bottom: -20px;
         }
     }
 }
